// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Field Tests should not render warning/error when field has not been touched 1`] = `
<div
  className="sc-dnqmqq bvocuT"
>
  <label>
    foobar
  </label>
  <div>
    <input
      className="sc-iwsKbI bvRtkK"
      placeholder="foobar"
      type="text"
    />
  </div>
</div>
`;

exports[`Form Field Tests should render warning/error when field has been touched 1`] = `
<div
  className="sc-dnqmqq bvocuT"
>
  <label>
    foobar
  </label>
  <div>
    <input
      className="sc-iwsKbI bvRtkK"
      placeholder="foobar"
      type="text"
    />
    <div
      className="sc-gzVnrw jhPglL"
    >
      some error
    </div>
  </div>
</div>
`;
